Headline line-height for Hero 1 and Hero 2 too large (Resolves #380) (#385)

--- a/css/forty_acres.css
+++ b/css/forty_acres.css
@@ -2167,6 +2167,7 @@ ol > li > ol > li > ol > li > ol > li > ol > li > ol > li {
   color: #fff;
   font-size: 2.0625rem;
   font-weight: 600;
+  line-height: normal;
 }
 @media screen and (min-width: 900px) {
   .hero--photo-orange-insert .hero-headline {
@@ -2204,12 +2205,11 @@ ol > li > ol > li > ol > li > ol > li > ol > li > ol > li {
   color: #fff;
   font-size: 2.0625rem;
   font-weight: 600;
-  line-height: 1.25;
+  line-height: normal;
 }
 @media screen and (min-width: 1200px) {
   .ut-hero.hero--photo-gradient .hero-headline {
     font-size: 2.4375rem;
-    line-height: 2.625;
   }
 }
 .ut-hero .ut-btn--hero:hover,
